; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mspatcha/extr_mspatcha_main.c_DecodeInt.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mspatcha/extr_mspatcha_main.c_DecodeInt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @DecodeInt(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  store i32 0, i32* %4, align 4
  br label %6

6:                                                ; preds = %31, %1
  %7 = load i32, i32* %4, align 4
  %8 = icmp slt i32 %7, 32
  br i1 %8, label %9, label %34

9:                                                ; preds = %6
  %10 = load i32, i32* %2, align 4
  %11 = call i64 @ReadByte(i32 %10)
  %12 = trunc i64 %11 to i32
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %5, align 4
  %14 = and i32 %13, 63
  %15 = load i32, i32* %4, align 4
  %16 = shl i32 %14, %15
  %17 = load i32, i32* %3, align 4
  %18 = or i32 %17, %16
  store i32 %18, i32* %3, align 4
  %19 = load i32, i32* %5, align 4
  %20 = and i32 %19, 128
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %30

22:                                               ; preds = %9
  %23 = load i32, i32* %5, align 4
  %24 = and i32 %23, 64
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %22
  %27 = load i32, i32* %3, align 4
  %28 = mul nsw i32 %27, -1
  store i32 %28, i32* %3, align 4
  br label %29

29:                                               ; preds = %26, %22
  br label %34

30:                                               ; preds = %9
  br label %31

31:                                               ; preds = %30
  %32 = load i32, i32* %4, align 4
  %33 = add nsw i32 %32, 6
  store i32 %33, i32* %4, align 4
  br label %6

34:                                               ; preds = %29, %6
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i64 @ReadByte(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
